vlib/v/checker/tests/wrong_muti_dim_arr_declare_err.vv
module main

fn main() {
        a2 := [][][]f32[][]{}
        dump(typeof(a2).name)

	assert typeof(a2).name == '[][][]f32'
}

